--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +15,8 @@
     "knex": "^0.19.2",
     "nodemon": "^1.19.1",
     "pg": "^7.12.1"
+  },
+  "devDependencies": {
+    "supertest": "^4.0.2"
   }
 }
