--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "supertest": "^4.0.2",
+    "jest": "^24.5.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.19.2",
     "nodemon": "^1.19.1",
     "pg": "^7.12.1"
   },
-  "devDependencies": {
-    "supertest": "^4.0.2"
-  }
+  "devDependencies": {}
 }
