--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "knex": "^0.19.2",
     "nodemon": "^1.19.1",
     "pg": "^7.12.1",
+    "randomcolor": "^0.5.4",
     "supertest": "^4.0.2"
   },
   "devDependencies": {
