passing post tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - postgresql
 before_script:
   - psql -c 'CREATE DATABASE palette_picker_tests;' -U postgres
-  - knex migriate:latest --env=test
+  - knex migrate:latest --env=test
   - knex seed:run --env=test
 notifications:
   email: false
