--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,4 @@ deploy:
   app: palette-picker-database
   on:
     repo: AntonioFry/palette-picker-back-end
-    branch: travis-setup
+    branch: master
